# pyonetrue

./: .gitignore  .gitmodules  .remove-sm  Functional-Design.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
doc/: Architecture.md  Behavior-Project-Specific.md  Bundling-Challenges.md  CLI-Spec.md  Design.md  Developer-Guide.md  Functional-Design.md  Re-Implementation-Plan.md  USAGE.txt  User-Guide.md  article.md
doc/0.3/: Design.md
doc/0.4/: Design.md  Features.md  Implementation-Plan.md
doc/0.5/: Design.md  Implementation-Plan.md  Re-Implementation-Plan.md  USAGE.txt
doc/0.6/: USAGE.txt
flat/: pyonetrue.py
issue/ast-unexpected-indent/: ISSUE.txt  Instructions.txt  dlocate.tar.xz
issue/ci-fails/: 0_build.txt  Recomendation.md  Recomendations-v1.md  Recomendations-v2.md  Recomendations-v4.md  Recomendations.md  Root-Cause-Analysis.md  ci-pyonetrue.py  local-pyonetrue.py
issue/future-imports-must-be-at-beginning/: Analysis.md  ISSUE.txt  Instructions.txt  cygport.tar.xz
issue/multiple-entrypoints/: Analysis.md  (+1 more)
ref/: CLI-SE-Design-Doc-Types.md  CLI-SE-Document-Types.md
scripts/: example  pyonetrue  run-tests
tests/: test_classify.py  test_cli.py  test_extract.py  test_extract_ast.py  test_flatten.py  test_flattening.py  test_future_imports.py  test_gather.py  test_imports.py  test_main_from.py  test_main_passthrough.py  test_main_py.py  test_normalize.py  test_normalize_imports.py  test_package.py  test_reorder.py  test_round_trip.py  test_stress.py  test_z_round_trip.py
(+15 files in other folders)
