[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyonetrue"
version = "0.5.4"
description = "Deterministic Python module flattener"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Philip Dye", email = "phdye@acm.org" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/yourusername/pyonetrue"
Repository = "https://github.com/yourusername/pyonetrue"
Issues = "https://github.com/yourusername/pyonetrue/issues"

[project.scripts]
pyonetrue = "pyonetrue.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
